--- a/build.gradle
+++ b/build.gradle
@@ -29,9 +29,8 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.4.0'
     runtimeOnly 'com.h2database:h2'
-    testImplementation 'io.cucumber:cucumber-java:7.15.0'
-    testImplementation 'io.cucumber:cucumber-junit:7.15.0'
 }
 
 tasks.named('test') {
